Closed Bug 107355 Opened 23 years ago Closed 23 years ago

crash in ftp directory viewer accessing subdirectory

Categories

(Core Graveyard :: Networking: FTP, defect)

x86
Linux
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: bulbul, Assigned: bbaetz)

References

Details

(Keywords: crash)

Attachments

(2 files)

Mozilla consistently crashes on me when i do the following:

1. Go to <ftp://ftp.linux.ucla.edu/redhat>.
2. Click on "Up to higher level directory".
3. When parent directory has loaded, click on any subdirectroy, 
   such as "mandrake".

I couldn't reproduce the problem on another ftp server i tried.

Here's a TalkBack id: TB37344427H. I'll attach this presently.

I'm using Linux trunk build 2001-10-28-21.
Attached file talkback TB3734666W
The reason maybe my checkin to ftp urlparsing (bug 84242). I also saw a crash at
some point but was unable to reproduce it. Maybe the bugfix exposed (or
introduced) some uninitialized variable or something else. Who can help reading
the talkback report?
Status: UNCONFIRMED → NEW
Ever confirmed: true
WFM 2001102903 on Win2k. 

CC: stephend@netscape.com, for talkback retrieval, please (TB37344427H)
Incident ID 37344427
Stack Signature libpthread.so.0 + 0x7c37 (0x401e3c37) c2976e09
Bug ID
Trigger Time 2001-10-29 07:18:54
Email Address
URL visited
User Comments Clicked on subdirectory in directory viewer.
Build ID 2001102821
Product ID MozillaTrunk
Platform ID LinuxIntel
Trigger Reason SIGSEGV: Segmentation Fault: (signal 11)
Stack Trace
libpthread.so.0 + 0x7c37 (0x401e3c37)
libc.so.6 + 0x7fd4d (0x40522d4d)
PR_Free()
nsMemoryImpl::Free()
nsMemory::Free()
Deallocate()
_._t20nsSharedBufferHandle1Zc
nsFtpState::~nsFtpState()
nsFtpState::Release()
nsFTPChannel::~nsFTPChannel()
nsFTPChannel::Release()
XPCJSRuntime::GCCallback()
DOMGCCallback()
js_GC()
js_ForceGC()
JS_GC()
nsJSContext::GC()
GlobalWindowImpl::SetNewDocument()
DocumentViewerImpl::Init()
nsDocShell::SetupNewViewer()
nsWebShell::SetupNewViewer()
nsDocShell::Embed()
nsWebShell::Embed()
nsDocShell::CreateContentViewer()
nsDSURIContentListener::DoContent()
nsDocumentOpenInfo::DispatchContent()
nsDocumentOpenInfo::OnStartRequest()
nsFTPChannel::OnStartRequest()
nsFTPDirListingConv::OnStartRequest()
nsStreamListenerTee::OnStartRequest()
DataRequestForwarder::DelayedOnStartRequest()
DataRequestForwarder::OnDataAvailable()
nsOnDataAvailableEvent::HandleEvent()
nsARequestObserverEvent::HandlePLEvent()
PL_HandleEvent()
PL_ProcessPendingEvents()
nsEventQueueImpl::ProcessPendingEvents()
event_processor_callback()
our_gdk_io_invoke()
libglib-1.2.so.0 + 0x1001e (0x4037301e)
libglib-1.2.so.0 + 0x117f3 (0x403747f3)
libglib-1.2.so.0 + 0x11dd9 (0x40374dd9)
libglib-1.2.so.0 + 0x11f8c (0x40374f8c)
libgtk-1.2.so.0 + 0x94803 (0x40289803)
nsAppShell::Run()
nsAppShellService::Run()
main1()
main()
libc.so.6 + 0x1c177 (0x404bf177) 
->bradley
Assignee: pchen → bbaetz
Keywords: crash
Got it - mPath.Adopt doesn't copy (and .Assign crashes..).

Doh!

Trying a fix now.
Status: NEW → ASSIGNED
Component: XP Apps → Networking: FTP
Attached patch patchSplinter Review
Comment on attachment 55616 [details] [diff] [review]
patch

fine
Attachment #55616 - Flags: review+
Comment on attachment 55616 [details] [diff] [review]
patch

sr=scc
Attachment #55616 - Flags: superreview+
checked in.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
QA Contact: sairuh → benc
*** Bug 107698 has been marked as a duplicate of this bug. ***
VERIFIED: rc1, win98.
Status: RESOLVED → VERIFIED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: