Bug 107355 - fix crash when leaving root directory of an ftp server after accessing another dir. r=dougt, sr=scc.